--- a/chocopie.html
+++ b/chocopie.html
@@ -38,7 +38,7 @@
                         <p class="txt-small">초코파이 하우스 만의</p>
                         <p class="txt-large">SPECIAL RECIPE</p>
                     </div>
-                    <p><i class="fas fa-search-plus"></i> 초코파이 위 <span>빨간색</span> 동그라미를 클릭해보세요.</p>
+                    <p class="txt-hover"><i class="fas fa-search-plus"></i> 초코파이 위 <span>빨간색</span> 동그라미를 클릭해보세요.</p>
                     <div class="chocopie-detail">
                         <img src="images/chocopie_sh.png" alt="초코파이">
                         <ul class="chocopie-img-detail">
