--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="content-main">
                 <a href="product.html">
                     <img src="images/maincont1_blank.jpg" alt="main" class="blank">
-                    <img src="images/maincont1_blank_m.jpg" alt="main" class="blank-m">
+                    <!-- <img src="images/maincont1_blank_m.jpg" alt="main" class="blank-m"> -->
                 </a>
                 <div class="content-main-c">
                     <a href="product.html">
