--- a/marketONGranola.html
+++ b/marketONGranola.html
@@ -67,7 +67,8 @@
                             <li class="modal-cont gran-modal-cont">
                                 <img src="images/granola1.png" alt="그래놀라">
                                 <p>오!그래놀라 초코고래밥</p>
-                                <p>1. 고래밥과 그래놀라의 달콤한 만남!<br>
+                                <p>
+                                    1. 고래밥과 그래놀라의 달콤한 만남!<br>
                                     2. 맛과 재미를 동시에 즐길 수 있는 8명의 귀여운 해양 생물 캐릭터<br>
                                     3. 리얼 초콜릿과 카카오 파우더로 만들어 더욱 진한 초콜릿맛<br>
                                     4. 건강한 5가지 통곡물로 만든 초코그래놀라와 오곡볼.</p>
