--- a/marketONGranola.html
+++ b/marketONGranola.html
@@ -54,14 +54,30 @@
                         <img src="images/granola7.png" alt="그래놀라" class="modal-btn">
                         <img src="images/granola8.png" alt="그래놀라" class="modal-btn">
                         <ul class="shelf-box-txt">
-                            <li>오!그래놀라 고래밥</li>
-                            <li>오!그래놀라 POP 초코아몬드</li>
-                            <li>오!그래놀라 POP 크랜베리</li>
-                            <li>오!그래놀라 단백질</li>
-                            <li>오!그래놀라 딸기</li>
-                            <li>오!그래놀라 카카오</li>
-                            <li>오!그래놀라 야채</li>
-                            <li>오!그래놀라 검은콩</li>
+                            <li>오!그래놀라 고래밥
+                                <p><span> 클릭</span> 자세히 보기</p>
+                            </li>
+                            <li>오!그래놀라 POP 초코아몬드
+                                <p><span> 클릭</span> 자세히 보기</p>
+                            </li>
+                            <li>오!그래놀라 POP 크랜베리
+                                <p><span> 클릭</span> 자세히 보기</p>
+                            </li>
+                            <li>오!그래놀라 단백질
+                                <p><span> 클릭</span> 자세히 보기</p>
+                            </li>
+                            <li>오!그래놀라 딸기
+                                <p><span> 클릭</span> 자세히 보기</p>
+                            </li>
+                            <li>오!그래놀라 카카오
+                                <p><span> 클릭</span> 자세히 보기</p>
+                            </li>
+                            <li>오!그래놀라 야채
+                                <p><span> 클릭</span> 자세히 보기</p>
+                            </li>
+                            <li>오!그래놀라 검은콩
+                                <p><span> 클릭</span> 자세히 보기</p>
+                            </li>
                         </ul>
                         <ul class="modal gran-modal">
                             <li class="modal-cont gran-modal-cont">
