--- a/product.html
+++ b/product.html
@@ -36,35 +36,43 @@
                     <li class="product-list modal-btn">
                         <img src="images/product1.png" alt="제품1">
                         <p>오!구마</p>
+                        <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                     <li class="product-list modal-btn">
                         <img src="images/product2.png" alt="제품2">
                         <p>오징어톡</p>
+                        <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                     <li class="product-list modal-btn">
                         <img src="images/product3.png" alt="제품3">
                         <p>고추칩</p>
+                        <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                         
                     <li class="product-list modal-btn">
                         <img src="images/product4.png" alt="제품4">
                         <p>징어젤리</p>
+                        <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                     <li class="product-list modal-btn">
                         <img src="images/product5.png" alt="제품5">
                         <p>단백질 드링크</p>
+                        <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                     <li class="product-list modal-btn">
                         <img src="images/product6.png" alt="제품6">
                         <p>호떡품은 붕어빵</p>
+                        <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                     <li class="product-list modal-btn">
                         <img src="images/product7.png" alt="제품7">
                         <p>오!라이스 구운쌀칩</p>
+                        <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                     <li class="product-list modal-btn">
                         <img src="images/product8.png" alt="제품8">
                         <p>미쯔볼 쿠키앤크림</p>
+                        <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                 </ul>
                 <div class="modal product-modal">
