--- a/marketONGranola.html
+++ b/marketONGranola.html
@@ -45,40 +45,46 @@
                 <p><i class="fas fa-search-plus"></i> 그림을 클릭하면 자세한 설명을 볼 수 있습니다.</p>
                 <div class="shelf">
                     <div class="shelf-box">
-                        <img src="images/granola1.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granola2.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granola3.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granola4.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granola5.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granola6.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granola7.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granola8.png" alt="그래놀라" class="modal-btn">
-                        <ul class="shelf-box-txt">
-                            <li>오!그래놀라 고래밥
-                                <p><span> 클릭</span> 자세히 보기</p>
-                            </li>
-                            <li>오!그래놀라 POP 초코아몬드
-                                <p><span> 클릭</span> 자세히 보기</p>
-                            </li>
-                            <li>오!그래놀라 POP 크랜베리
-                                <p><span> 클릭</span> 자세히 보기</p>
-                            </li>
-                            <li>오!그래놀라 단백질
-                                <p><span> 클릭</span> 자세히 보기</p>
-                            </li>
-                            <li>오!그래놀라 딸기
-                                <p><span> 클릭</span> 자세히 보기</p>
-                            </li>
-                            <li>오!그래놀라 카카오
-                                <p><span> 클릭</span> 자세히 보기</p>
-                            </li>
-                            <li>오!그래놀라 야채
-                                <p><span> 클릭</span> 자세히 보기</p>
-                            </li>
-                            <li>오!그래놀라 검은콩
-                                <p><span> 클릭</span> 자세히 보기</p>
-                            </li>
-                        </ul>
+                        <div class="modal-btn">
+                            <img src="images/granola1.png" alt="그래놀라">
+                            <p>오! 그래놀라 고래밥</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granola2.png" alt="그래놀라">
+                            <p>오!그래놀라 POP 초코아몬드 </p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granola3.png" alt="그래놀라">
+                            <p>오!그래놀라 POP 크랜베리</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granola4.png" alt="그래놀라">
+                            <p>오!그래놀라 단백질</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granola5.png" alt="그래놀라">
+                            <p>오!그래놀라 딸기</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granola6.png" alt="그래놀라">
+                            <p>오!그래놀라 카카오</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granola7.png" alt="그래놀라">
+                            <p>오!그래놀라 야채</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granola8.png" alt="그래놀라">
+                            <p>오!그래놀라 검은콩</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
                         <ul class="modal gran-modal">
                             <li class="modal-cont gran-modal-cont">
                                 <img src="images/granola1.png" alt="그래놀라">
