--- a/marketONGranola.html
+++ b/marketONGranola.html
@@ -52,12 +52,12 @@
                         </div>
                         <div class="modal-btn">
                             <img src="images/granola2.png" alt="그래놀라">
-                            <p>오!그래놀라 POP 초코아몬드 </p>
+                            <p>POP 초코아몬드 </p>
                             <p><span> 클릭</span> 자세히 보기</p>
                         </div>
                         <div class="modal-btn">
                             <img src="images/granola3.png" alt="그래놀라">
-                            <p>오!그래놀라 POP 크랜베리</p>
+                            <p>POP 크랜베리</p>
                             <p><span> 클릭</span> 자세히 보기</p>
                         </div>
                         <div class="modal-btn">
