--- a/chocopie.html
+++ b/chocopie.html
@@ -38,8 +38,24 @@
                         <p class="txt-small">초코파이 하우스 만의</p>
                         <p class="txt-large">SPECIAL RECIPE</p>
                     </div>
-                    <p class="txt-hover"><i class="fas fa-search-plus"></i> 초코파이 위 <span>빨간색</span> 동그라미를 클릭해보세요.</p>
-                    <div class="chocopie-detail">
+                    <div class="mobile">
+                        <div>
+                            100% 카카오 버터로 만들어<br>
+                            쌉싸름하면서 깊고 진한 맛의<br>
+                        </div>
+                        <div> 파티셰의 특별한 레시피로 만든 기분 좋은 서프라이즈<br>
+                        </div>
+                        <div>
+                            플레이버 별<br>
+                            최적화된 레시피의<br> 
+                        </div>
+                        <div>
+                            천연 바닐라 빈이 콕콕!<br>
+                            입안에서 사르르 녹아내리는<br>
+                        </div>
+                    </div>
+                    <p class="pc2"><i class="fas fa-search-plus"></i> 초코파이 위 <span>빨간색</span> 동그라미를 클릭해보세요.</p>
+                    <div class="pc2 chocopie-detail">
                         <img src="images/chocopie_sh.png" alt="초코파이">
                         <ul class="chocopie-img-detail">
                             <li class="chocopie-detail-list">
