--- a/marketONGranola.html
+++ b/marketONGranola.html
@@ -18,6 +18,74 @@
 <body>
 <div class="wrap">
     <div include-html="header.html"></div>
+    <div class="modal modal-bg"></div>
+    <ul class="modal modal-box">
+        <div class="close">X</div>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granola1.png" alt="그래놀라">
+            <p>오!그래놀라 초코고래밥</p>
+            <p>
+                1. 고래밥과 그래놀라의 달콤한 만남!<br>
+                2. 맛과 재미를 동시에 즐길 수 있는 8명의 귀여운 해양 생물 캐릭터<br>
+                3. 리얼 초콜릿과 카카오 파우더로 만들어 더욱 진한 초콜릿맛<br>
+                4. 건강한 5가지 통곡물로 만든 초코그래놀라와 오곡볼.</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granola2.png" alt="그래놀라">
+            <p>오!그래놀라팝 초코 아몬드</p>
+            <p>1. 국내생산 그래놀라 30%<br>
+                2. 5가지 통곡물의 맛과 영양 가득<br>
+                3. 새로운 모양과 식감의 그래놀라 팝<br>
+                4. 3가지 오곡볼과 아몬드의 달콤한 만남!</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granola3.png" alt="그래놀라">
+            <p>오!그래놀라팝 크랜베리아몬드</p>
+            <p>1. 국내생산 그래놀라 30%<br>
+                2. 5가지 통곡물의 맛과 영양 가득<br>
+                3. 새로운 모양과 식감의 그래놀라 팝<br>
+                4. 상큼한 크랜베리와 고소한 아몬드가 듬뿍!</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granola4.png" alt="그래놀라">
+            <p>오!그래놀라 단백질</p>
+            <p>1. 국내생산 그래놀라 97%<br>
+                2. 고소한 견과류(통아몬드, 땅콩)과 렌틸콩 듬뿍!<br>
+                3. 달콤하고 고소한 넛츠카라멜맛</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granola5.png" alt="그래놀라">
+            <p>오!그래놀라 딸기</p>
+            <p>1. 국내생산 그래놀라 95%<br>
+                2. 우유칼슘볼과 리얼 딸기 원물<br>
+                3. 상큼한 딸기 그래놀라<br>
+                4. 고 칼슘</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granola6.png" alt="그래놀라">
+            <p>오!그래놀라 딸기</p>
+            <p>1. 국내생산 그래놀라 95%<br>
+                2. 우유칼슘볼과 리얼 딸기 원물<br>
+                3. 상큼한 딸기 그래놀라<br>
+                4. 고 칼슘</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granola7.png" alt="그래놀라">
+            <p>오!그래놀라 딸기</p>
+            <p>1. 국내생산 그래놀라 95%<br>
+                2. 우유칼슘볼과 리얼 딸기 원물<br>
+                3. 상큼한 딸기 그래놀라<br>
+                4. 고 칼슘</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granola8.png" alt="그래놀라">
+            <p>오!그래놀라 딸기</p>
+            <p>1. 국내생산 그래놀라 95%<br>
+                2. 우유칼슘볼과 리얼 딸기 원물<br>
+                3. 상큼한 딸기 그래놀라<br>
+                4. 고 칼슘</p>
+        </li>
+    </ul>
     <div class="container">
         <div class="inner">
             <h1>Market O</h1>
@@ -85,72 +153,6 @@
                             <p>오!그래놀라 검은콩</p>
                             <p><span> 클릭</span> 자세히 보기</p>
                         </div>
-                        <ul class="modal gran-modal">
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granola1.png" alt="그래놀라">
-                                <p>오!그래놀라 초코고래밥</p>
-                                <p>
-                                    1. 고래밥과 그래놀라의 달콤한 만남!<br>
-                                    2. 맛과 재미를 동시에 즐길 수 있는 8명의 귀여운 해양 생물 캐릭터<br>
-                                    3. 리얼 초콜릿과 카카오 파우더로 만들어 더욱 진한 초콜릿맛<br>
-                                    4. 건강한 5가지 통곡물로 만든 초코그래놀라와 오곡볼.</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granola2.png" alt="그래놀라">
-                                <p>오!그래놀라팝 초코 아몬드</p>
-                                <p>1. 국내생산 그래놀라 30%<br>
-                                    2. 5가지 통곡물의 맛과 영양 가득<br>
-                                    3. 새로운 모양과 식감의 그래놀라 팝<br>
-                                    4. 3가지 오곡볼과 아몬드의 달콤한 만남!</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granola3.png" alt="그래놀라">
-                                <p>오!그래놀라팝 크랜베리아몬드</p>
-                                <p>1. 국내생산 그래놀라 30%<br>
-                                    2. 5가지 통곡물의 맛과 영양 가득<br>
-                                    3. 새로운 모양과 식감의 그래놀라 팝<br>
-                                    4. 상큼한 크랜베리와 고소한 아몬드가 듬뿍!</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granola4.png" alt="그래놀라">
-                                <p>오!그래놀라 단백질</p>
-                                <p>1. 국내생산 그래놀라 97%<br>
-                                    2. 고소한 견과류(통아몬드, 땅콩)과 렌틸콩 듬뿍!<br>
-                                    3. 달콤하고 고소한 넛츠카라멜맛</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granola5.png" alt="그래놀라">
-                                <p>오!그래놀라 딸기</p>
-                                <p>1. 국내생산 그래놀라 95%<br>
-                                    2. 우유칼슘볼과 리얼 딸기 원물<br>
-                                    3. 상큼한 딸기 그래놀라<br>
-                                    4. 고 칼슘</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granola6.png" alt="그래놀라">
-                                <p>오!그래놀라 딸기</p>
-                                <p>1. 국내생산 그래놀라 95%<br>
-                                    2. 우유칼슘볼과 리얼 딸기 원물<br>
-                                    3. 상큼한 딸기 그래놀라<br>
-                                    4. 고 칼슘</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granola7.png" alt="그래놀라">
-                                <p>오!그래놀라 딸기</p>
-                                <p>1. 국내생산 그래놀라 95%<br>
-                                    2. 우유칼슘볼과 리얼 딸기 원물<br>
-                                    3. 상큼한 딸기 그래놀라<br>
-                                    4. 고 칼슘</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granola8.png" alt="그래놀라">
-                                <p>오!그래놀라 딸기</p>
-                                <p>1. 국내생산 그래놀라 95%<br>
-                                    2. 우유칼슘볼과 리얼 딸기 원물<br>
-                                    3. 상큼한 딸기 그래놀라<br>
-                                    4. 고 칼슘</p>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
