--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,10 @@
                         </select>
                     </div> 
                     <div>    
-                        <input type="text" name="writer" placeholder="작성자 이름" maxlength=10 minlength=1> <input type="password" name="writer" placeholder="비밀번호" maxlength=10  minlength=1>
+                        <input type="text" name="writer" placeholder="작성자 이름" maxlength=10 minlength=1 autofocus>
+                    </div>
+                    <div>    
+                        <input type="password" name="password" placeholder="비밀번호" maxlength=10  minlength=1>
                     </div>
                     <div>
                         <input type="text" name="email" placeholder="이메일 주소" maxlength=30 minlength=1>
