--- a/marketONGBar.html
+++ b/marketONGBar.html
@@ -18,6 +18,50 @@
 <body>
 <div class="wrap">
     <div include-html="header.html"></div>
+    <div class="modal modal-bg"></div>
+    <ul class="modal modal-box">
+        <div class="close">X</div>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granolabar1.png" alt="그래놀라">
+            <p>오!그래놀라바 카카오</p>
+            <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                - 9가지 비타민과 무기질</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granolabar2.png" alt="그래놀라">
+            <p>오!그래놀라바 카카오</p>
+            <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                - 9가지 비타민과 무기질</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granolabar3.png" alt="그래놀라">
+            <p>오!그래놀라바 카카오</p>
+            <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                - 9가지 비타민과 무기질</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granolabar4.png" alt="그래놀라">
+            <p>오!그래놀라바 카카오</p>
+            <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                - 9가지 비타민과 무기질</p>
+        </li>
+        <li class="modal-cont gran-modal-cont">
+            <img src="images/granolabar5.png" alt="그래놀라">
+            <p>오!그래놀라바 카카오</p>
+            <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                - 9가지 비타민과 무기질</p>
+        </li>
+    </ul>
     <div class="container">
         <div class="inner">
             <h1>Market O</h1>
@@ -44,60 +88,31 @@
                 <p><i class="fas fa-search-plus"></i> 그림을 클릭하면 자세한 설명을 볼 수 있습니다.</p>
                 <div class="shelf">
                     <div class="shelf-box">
-                        <img src="images/granolabar1.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granolabar2.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granolabar3.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granolabar4.png" alt="그래놀라" class="modal-btn">
-                        <img src="images/granolabar5.png" alt="그래놀라" class="modal-btn">
-                        <ul class="shelf-box-txt">
-                            <li>오!그래놀라 바 카카오</li>
-                            <li>오!그래놀라 바 단호박고구마</li>
-                            <li>오!그래놀라 바 검은콩</li>
-                            <li>오!그래놀라 바 무화가베리</li>
-                            <li>오!그래놀라 실속팩</li>
-                        </ul>
-                        <ul class="modal gran-modal">
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granolabar1.png" alt="그래놀라">
-                                <p>오!그래놀라바 카카오</p>
-                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
-                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
-                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
-                                    - 9가지 비타민과 무기질</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granolabar2.png" alt="그래놀라">
-                                <p>오!그래놀라바 카카오</p>
-                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
-                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
-                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
-                                    - 9가지 비타민과 무기질</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granolabar3.png" alt="그래놀라">
-                                <p>오!그래놀라바 카카오</p>
-                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
-                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
-                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
-                                    - 9가지 비타민과 무기질</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granolabar4.png" alt="그래놀라">
-                                <p>오!그래놀라바 카카오</p>
-                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
-                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
-                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
-                                    - 9가지 비타민과 무기질</p>
-                            </li>
-                            <li class="modal-cont gran-modal-cont">
-                                <img src="images/granolabar5.png" alt="그래놀라">
-                                <p>오!그래놀라바 카카오</p>
-                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
-                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
-                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
-                                    - 9가지 비타민과 무기질</p>
-                            </li>
-                        </ul>
+                        <div class="modal-btn">
+                            <img src="images/granolabar1.png" alt="그래놀라">
+                            <p>오!그래놀라 바 카카오</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granolabar2.png" alt="그래놀라">
+                            <p>오!그래놀라 바 단호박고구마</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granolabar3.png" alt="그래놀라">
+                            <p>오!그래놀라 바 검은콩</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granolabar4.png" alt="그래놀라">
+                            <p>오!그래놀라 바 무화과베리</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
+                        <div class="modal-btn">
+                            <img src="images/granolabar5.png" alt="그래놀라">
+                            <p>오!그래놀라 실속팩</p>
+                            <p><span> 클릭</span> 자세히 보기</p>
+                        </div>
                     </div>
                 </div>
             </div>
