--- a/product.html
+++ b/product.html
@@ -18,6 +18,84 @@
 <body>
 <div class="wrap">
     <div include-html="header.html"></div>
+    <div class="modal modal-bg"></div>
+    <div class="modal modal-box">
+        <!-- <div class="close">X</div> -->
+        <div class="modal-cont product-modal-cont">
+            <img src="images/product1.png" alt="제품">
+            <p><strong>꿀버터 오!구마</strong></p>
+            <p>달콤~빠삭! 하구마 꿀버터 오!구마</p>
+            <p>
+                구운 고구마에 꿀버터 한스푼!<br> 달콤하게 코팅해 더 빠삭한 식감!
+            </p>
+        </div>
+        <div class="modal-cont product-modal-cont ">
+            <img src="images/product2.png" alt="제품">
+            <p><strong>마켓오 오징어톡</strong></p>
+            <p>식감부자 톡!시리즈 오징어톡 구운 오징어 맛</p>
+            <p>
+                입맛 돋우는 오도독 톡! 식감<br>
+                바다향 가득한 '오징어 풍미' 그대로!<br>
+                간장에 은은한 버터 향이 더해져 기분 좋은 단짠단짠
+            </p>
+        </div>
+        <div class="modal-cont product-modal-cont ">
+            <img src="images/product3.png" alt="제품">
+            <p><strong>고추칩</strong></p>
+            <p>파삭파삭 찐 고추튀김 맛! 고추칩</p>
+            <p>
+                향긋한 고추와 고기소 풍미로 고추튀김 맛을 그대로 구현하였습니다.<br>
+                파삭!파삭! 가볍고 경쾌한 바삭함을 즐기실 수 있습니다.
+            </p>
+        </div>
+        <div class="modal-cont product-modal-cont ">
+            <img src="images/product4.png" alt="제품">
+            <p><strong>찡어젤리</strong></p>
+            <p>젤리인가? 오징어인가?</p>   
+            <p>
+                지금까지 이런 젤리는 없.었.다.<br>
+                리얼한 오징어 모양에 '진짜'오징어 맛 젤리!<br><br>
+                짭짤고소, 매콤달콤 2가지 맛을 동시에!
+            </p>
+        </div>
+        <div class="modal-cont product-modal-cont ">
+            <img src="images/product5.png" alt="제품">
+            <p><strong>닥터유드링크 단백질 카페라떼</strong></p>
+            <p>간편하게 마시는 영양충전</p>
+            <p>
+                달걀 2개 분량 단백질 드링크<br><br>
+                <u>단백질 카페라떼가 특별한 이유</u><br>
+                18종의 훌륭한 아미노산 프로필을 함유한 달걀 2개 분량의 우유단백질 12g 함유
+            </p>
+        </div>
+        <div class="modal-cont product-modal-cont ">
+            <img src="images/product6.png" alt="제품">
+            <p><strong>호떡 품은 참붕어빵</strong></p>
+            <p>길거리 대표간식 붕어빵과 호떡의 달콤한 만남!</p>
+            <p>
+                참붕어빵의 쫀득함과 달콤향긋한 호떡의 새로운 만남!<br>
+                ※ 전자레인지 8초, 또는 후라이팬에 기름을 살짝 둘러 구워 드시면 더욱 맛있습니다.
+            </p>
+        </div>
+        <div class="modal-cont product-modal-cont ">
+            <img src="images/product7.png" alt="제품">
+            <p><strong>구운쌀칩</strong></p>
+            <p>화덕에 직접 구워 고소하고 바삭한 O!Rice 구운쌀칩</p>             
+            <p>
+                36시간 숙성한 쌀반죽을 화덕에 구워 고소한 풍미와 가볍게 바삭한 식감!<br>
+                담백하고 은은한 달콤한 맛이 일품인 Okay! O!RIce
+            </p>
+        </div>
+        <div class="modal-cont product-modal-cont ">
+            <img src="images/product8.png" alt="제품">
+            <p><strong>미쯔볼</strong></p>
+            <p>맛도 모양도 새롭게! 미쯔볼 쿠키앤크림</p>
+            <p> 
+                작고 귀여운 '미쯔'를 새로운 볼 형태로 즐겁게 와그작!<br>
+                진한 코코아 쿠키 '미쯔'에 부드러운 화이트 크림을 겹겹이 입혀 쿠키앤크림 맛 완성!
+            </p> 
+        </div>
+    </div>
     <div class="container">
         <div class="inner">
             <h1>새로운 제품</h1>
@@ -35,7 +113,7 @@
                 <ul class="product">
                     <li class="product-list modal-btn">
                         <img src="images/product1.png" alt="제품1">
-                        <p>오!구마</p>
+                        <p>오!구마v</p>
                         <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                     <li class="product-list modal-btn">
@@ -75,7 +153,7 @@
                         <p><span> 클릭</span> 자세히 보기</p>
                     </li>
                 </ul>
-                <div class="modal product-modal">
+                <!-- <div class="modal product-modal">
                     <div class="modal-cont product-modal-cont">
                         <img src="images/product1.png" alt="제품">
                         <p><strong>꿀버터 오!구마</strong></p>
@@ -152,7 +230,7 @@
                             진한 코코아 쿠키 '미쯔'에 부드러운 화이트 크림을 겹겹이 입혀 쿠키앤크림 맛 완성!
                         </p> 
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
