--- a/faq.html
+++ b/faq.html
@@ -23,7 +23,8 @@
             <h1>고객센터</h1>
             <div class="snb">
                 <ul>
-                    <li class="selected">고객 의견 접수</li>
+                    <li class="selected"><a href=faq.html">고객 의견 접수</a></li>
+                    <li><a href="event.html">이벤트</a></li>
                 </ul>
             </div>
             <div class="content">
@@ -32,7 +33,7 @@
                 <div class="depth">
                     <span>고객센터</span></span>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;</span></span>고객 의견 접수</span>
                 </div>
-                <p>전화 및 홈페이지를 통해 들어온 소비자 의견, 클레임은 관련부서에 전달되어 적극적으로 반영하고 있습니다.</p>
+                <p style="margin:10px">전화 및 홈페이지를 통해 들어온 소비자 의견, 클레임은 관련부서에 전달되어 적극적으로 반영하고 있습니다.</p>
                 <div class="cont-customer">
                     <div>
                         <input type="radio" id="suggest" name="type" value="제안하기" >
