--- a/header.html
+++ b/header.html
@@ -90,6 +90,7 @@
                         <div class="lnb-wrap">
                             <ul class="lnb">
                                 <li><a href="faq.html">고객 의견 접수</a></li>
+                                <li><a href="event.html">이벤트</a></li>
                             </ul>
                         </div>
                         <div class="lnb-img">
@@ -141,6 +142,7 @@
             </li>
             <li class="nav__depth1">고객센터<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="faq.html">고객 의견 접수</a></div>
+                <div class="nav__depth2"><a href="event.html">이벤트</a></div>
             </li>
             <li class="nav__depth1">회사소개<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="orionIntro.html">오리온 소개</a></div>
