--- a/chocopieStore.html
+++ b/chocopieStore.html
@@ -34,14 +34,14 @@
                 </div>
                 <div class="store-box">
                     <div class="store-list">
-                        <p>도곡 본점</p>
+                        <p style="margin:10px">도곡 본점</p>
                         <img src="images/chocopie_map.PNG" alt="매장">
-                        <p>서울시 강남구 남부순환로 2745 마켓오 도곡점 1층 초코파이하우스</p>
+                        <p style="margin:10px">서울시 강남구 남부순환로 2745 마켓오 도곡점 1층 초코파이하우스</p>
                     </div>
                     <div class="store-list">
-                        <p>마켓오네이처카페 압구정점</p>
+                        <p style="margin:10px">마켓오네이처카페 압구정점</p>
                         <img src="images/chocopie_map2.PNG" alt="매장">
-                        <p>서울시 강남구 도산대로 310 916빌딩 1층</p>
+                        <p style="margin:10px">서울시 강남구 도산대로 310 916빌딩 1층</p>
                     </div>
                 </div>
             </div>
